AUTOMAKE_OPTIONS = foreign
dataetcspiderdir = @DATA_ETC_DIR@/spider
dataetcspider_DATA = WMM.COF clin_elev.lut ephem.2000 \
	happy.mid.sch happy.north.sch happy.south.sch \
	sad.mid.sch sad.north.sch sad.south.sch \
	r_ntd.lut r_cernox.lut \
	d_simonchase.lut d_curve10.lut \
	d_4k_4.lut d_cp_4.lut D75322.lut \
	c_still_4.lut \
	D87587.lut D77243.lut \
	d_4k_3.lut d_cp_3.lut \
	c_still_3.lut c_fp_3.lut n_ntd3_3.lut \
	D75551.lut D78317.lut D78016.lut D77239.lut
EXTRA_DIST = ${dataetcspider_DATA}
