AUTOMAKE_OPTIONS = foreign
dataetcdir = @DATA_ETC_DIR@
dataetc_DATA = WMM.COF clin_elev.lut dt600.txt ephem.2000 he4_litre.txt \
							 he4_percent.txt mag.lut rox102a19.txt rox102a20.txt \
							 rox102a21.txt rox102a22.txt rox102a23.txt rox102a3.txt \
							 rox102a4.txt rox102a5.txt rox102a6.txt rox102a7.txt \
               ss.lut happy.mid.sch happy.north.sch happy.south.sch \
							 sad.mid.sch sad.north.sch sad.south.sch
EXTRA_DIST = ${dataetc_DATA}
