AUTOMAKE_OPTIONS = foreign
dataetcpalantirdir = @DATA_ETC_DIR@/palantir
dataetcpalantir_DATA = log.txt icon.gif palantir.png palantir0.jpg \
											 palantir1.jpg palantir2.jpg palantir3.jpg cryolab.pal \
											 default.pal example.pal layout.pal projector.pal \
											 cryo.png icon.gif
EXTRA_DIST = ${dataetcpalantir_DATA}
