AUTOMAKE_OPTIONS = foreign
dataetcpalantirdir = @DATA_ETC_DIR@/palantir
dataetcpalantir_DATA = alice.pal icon.gif palantir.png palantir0.jpg \
											 palantir1.jpg palantir2.jpg palantir3.jpg cryolab.pal \
											 default.pal example.pal layout.pal projector.pal \
											 cryo.png icon.gif pointing.pal cryo.pal housekeeping.pal \
                       slowdl.pal
EXTRA_DIST = ${dataetcpalantir_DATA}
